# rustlings-workshop

./: .gitignore  AGENTS.md  New-Features.md  README.md  clickhouse  fix_encoding.py  new_sections_offers.md
.devcontainer/: Dockerfile  devcontainer.json
.mimocode/plans/: 1781798995785-quick-forest.md  1782041054780-proud-cabin.md  1782042772756-tidy-squid.md
.scratch/: settings.json
01-Foundations/: README.md
01-Foundations/0-Intro/: 01_syntax.md  Cargo.toml  README.md  workshop.md
01-Foundations/01-Intro/: README.md  cargo-cheatsheet.md
01-Foundations/02-BasicCalculator/: README.md
01-Foundations/02-GuessGame/: README.md
01-Foundations/03-BasicCalculator/: README.md
01-Foundations/03-MasterMind/: README.md  master_mind.md
01-Foundations/04-MasterMind/: README.md
01-Foundations/1-BasicCalculator/: README.md  workshop.md
01-Foundations/1-MasterMind/: workshop.md
01-Foundations/2-BasicCalculator/: workshop.md
01-Foundations/2-MasterMind/: Cargo.toml  README.md  master-mind-advanced.md  master_mind2.py  workshop.md
01-Foundations/32-Week1FinalReflection/: README.md
02-Ownership/: README.md
02-Ownership/01-TicketV1/: README.md
02-Ownership/02-Traits/: README.md
02-Ownership/03-TicketV2/: README.md
02-Ownership/04-OBRM/: README.md
02-Ownership/05-OwnershipLifetimes/: README.md
02-Ownership/06-ConversionErrorHandling/: README.md
02-Ownership/3-TicketV1/: README.md  workshop.md
02-Ownership/37-OBRM/: README.md
02-Ownership/38-OwnershipLifetimes/: README.md
02-Ownership/4-Traits/: README.md  workshop.md
02-Ownership/5-TicketV2/: Cargo.toml  README.md  workshop.md
03-Collections/: README.md
03-Collections/01-TicketManagement/: README.md
03-Collections/14-ProfileBenchmark/workshop/: Cargo.toml
03-Collections/14-ProfileBenchmark/workshop/benches/: profile_benchmarks.rs
03-Collections/14-ProfileBenchmark/workshop/src/: lib.rs  main.rs
04-FileIO/: README.md
04-FileIO/07-NextGenFormats/: Cargo.toml  README.md
04-FileIO/07-NextGenFormats/f3-concept/: Cargo.toml  README.md
04-FileIO/07-NextGenFormats/f3-concept/src/: lib.rs  main.rs
04-FileIO/07-NextGenFormats/lance-bench/: Cargo.toml  README.md
04-FileIO/07-NextGenFormats/lance-bench/src/: lib.rs  main.rs
04-FileIO/07-NextGenFormats/nimble-design/: Cargo.toml  README.md
04-FileIO/07-NextGenFormats/nimble-design/src/: lib.rs  main.rs
04-FileIO/07-NextGenFormats/vortex-bench/: Cargo.toml  README.md
04-FileIO/07-NextGenFormats/vortex-bench/src/: lib.rs  main.rs
04-FileIO/07-NextGenFormats/warehouse/: Cargo.toml
04-FileIO/07-NextGenFormats/warehouse/results/: bench_results.json  bench_results.md
04-FileIO/07-NextGenFormats/warehouse/src/: lib.rs  main.rs
05-Concurrency/: README.md
06-CLIAndTools/: README.md
06-CLIAndTools/10-CustomCLIFruitSalad/workshop/: Cargo.toml
06-CLIAndTools/10-CustomCLIFruitSalad/workshop/src/: lib.rs  main.rs
06-TerminalApps/: README.md
07-GraphAndNetworkScience/: README.md
07-Security/: README.md
07-Security/06-RustlsTLS/workshop/: Cargo.toml  README.md
07-Security/06-RustlsTLS/workshop/src/: lib.rs  main.rs
08-Interop/: README.md
08-Security/: README.md
09-ObservabilityAndTesting/: README.md
09-ProductionSystems/: README.md
1-MasterMind/: master-mind.py  master_mind.md  workshop.md
10-ArrayFruitSalad/: Readme.md
10-ProductionSystems/: README.md
10-ProductionSystems/02-AxumShop/workshop/: Cargo.toml
10-ProductionSystems/02-AxumShop/workshop/src/: db.rs  errors.rs  lib.rs  main.rs
10-ProductionSystems/02-AxumShop/workshop/src/routes/: auth_routes.rs  mod.rs
10-ProductionSystems/03-AxumAuth/workshop/: Cargo.toml
10-ProductionSystems/03-AxumAuth/workshop/src/: lib.rs  main.rs
10-ProductionSystems/04-OpenTelemetry/workshop/: Cargo.toml
10-ProductionSystems/04-OpenTelemetry/workshop/src/: lib.rs
10-ProductionSystems/06-TinyRedis/workshop/: Cargo.toml
10-ProductionSystems/06-TinyRedis/workshop/src/: command.rs  error.rs  expiry.rs  lib.rs  main.rs  persistence.rs  storage.rs
10-ProductionSystems/06-TinyRedis/workshop/tests/: integration.rs
10-ToolsAndFrameworks/: README.md
11-Interop/: README.md
11-Reference/: README.md  collections-guide.md  data-management-io.md  memory-safety.md
12-DataEngAnalytics/: README.md
12-LinkedListFruitSalad/: README.md
13-ActorModel/: README.md
14-DataInfrastructure/: README.md  docker-compose.yml
14-DataInfrastructure/01-KafkaRdkafka/workshop/: Cargo.toml
14-DataInfrastructure/01-KafkaRdkafka/workshop/src/: lib.rs  main.rs
14-DataInfrastructure/02-PostgreSQLSqlx/workshop/: Cargo.toml
14-DataInfrastructure/02-PostgreSQLSqlx/workshop/src/: lib.rs  main.rs
14-DataInfrastructure/03-RedisAsync/workshop/: Cargo.toml
14-DataInfrastructure/03-RedisAsync/workshop/src/: lib.rs  main.rs
14-DataInfrastructure/04-ClickHouseIngestion/workshop/: Cargo.toml
14-DataInfrastructure/04-ClickHouseIngestion/workshop/src/: lib.rs  main.rs
14-DataInfrastructure/05-ApacheIggy/workshop/: Cargo.toml
14-DataInfrastructure/05-ApacheIggy/workshop/src/: lib.rs  main.rs
14-DataInfrastructure/06-DuckLakeCatalog/workshop/: Cargo.toml
14-DataInfrastructure/06-DuckLakeCatalog/workshop/src/: lib.rs  main.rs
14-DataInfrastructure/08-UnifiedPipeline/workshop/: Cargo.toml
14-DataInfrastructure/08-UnifiedPipeline/workshop/src/: lib.rs  main.rs
14-DataInfrastructure/09-OpenDalStorage/workshop/: Cargo.toml
14-DataInfrastructure/09-OpenDalStorage/workshop/src/: lib.rs  main.rs
14-Reference/: README.md  data-management-io.md  distributed-systems.md  heap-memory.md  memory-safety.md  security-model.md  send-sync.md
15-HashMapLanguage/: README.md
15-Reference/: README.md  concurrency-reference.md  crate-catalog.md  heap-memory.md
16-CollectionsLessonReflection/: README.md
16-ModernIdioms/: README.md
17-RustCollectionsDoc/: README.md
2-BasicCalculator/: workshop.md
3-TicketV1/: workshop.md
34-DataRace/: workshop.md
4-Traits/: workshop.md
5-TicketV2/: workshop.md
6-TicketManagement/: workshop.md
9-VectorFruitSalad/: README.md  workshop.md
(+607 files in other folders)
