[workspace]
resolver = "2"
members = [
    "lance-bench",
    "vortex-bench",
    "nimble-design",
    "f3-concept",
    "warehouse",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
arrow = "58"
arrow-array = "58"
arrow-schema = "58"
arrow-select = "58"
parquet = "58"
lance = { version = "7", default-features = false }
vortex = "0.74"
vortex-array = "0.74"
vortex-file = "0.74"
vortex-buffer = "0.74"
vortex-session = "0.74"
vortex-scan = "0.74"
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_distr = "0.4"
fake = "2.9"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tempfile = "3"
walkdir = "2"

[profile.release]
opt-level = 3
lto = "thin"
