[package]
name = "profile_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "profile_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true
debug = "line-tables-only"
