[package]
name = "nimble-design"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
