[package]
name = "rustls_tls_workshop"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "aws_lc_rs", "tls12"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time"] }
tokio-rustls = "0.26"
webpki = "0.22"
aws-lc-rs = "1"
