[package]
name = "kafka_rdkafka"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36", default-features = false, features = ["tokio", "cmake-build", "libz"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "test-util"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
