[package]
name = "clickhouse_ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse = { version = "0.13", default-features = false, features = ["rustls-tls", "lz4", "inserter"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
